2008-08-26  Ian Beckwith  <ianb@erislabs.net>

	* Fixed tests: amazon, debbugs, yahoo.
	* Added --disable-sr option to ./configure to disable
	  installing the 'sr' symbolic link pointing to surfraw,
	  to avoid clashes with the SR programming language.

2008-07-19  Ian Beckwith  <ianb@erislabs.net>

	* Search for default browsers at configure time.
	  Can be overridden with ./configure --with-text-browser=BROWSER
	  --with-graphical-browser=BROWSER.
	* Use AC_PROG_AWK to detect which awk implementation to use.
	* slinuxdoc: switch to test on main page, google thinks
	  search on search page is spyware shenanigans.
	* openbsd: fix test.
	* add uninstall-local targets to remove elvidir and symlinks
	  on uninstall.

2008-07-08  Ian Beckwith  <ianb@erislabs.net>

	* google: fix bashism, quote variable expansions (thanks to
	  Philip Armstrong and John Briggs).

2008-07-02  Ian Beckwith  <ianb@erislabs.net>

	* surfraw.IN:w3_url_escape: escape "`", stop escaping ".".
	  (Thanks to Micah Anderson).
	* debpackages/debcontents:
	  + update options and distributions,
	  + add -a option to use archive.debian.net
	* Fix javasun test.
	* Add javasun.test and lsm.test to EXTRA_DIST.

2008-06-16  Ian Beckwith  <ianb@erislabs.net>

	* Thanks to John Gruenenfelder for:
	  + New elvi: arxiv.
	  + surfraw-update-path: fix csh syntax.
	* wetandwild: switched to weather.com, as yahoo now uses AJAX.
	  Command line options and SURFRAW_weather_* variables no
	  longer supported.
	* port: fixed, original site is back.
	* austlii: fixed search URL and test.
	  Method now defaults to 'auto'.
	* translate: fixed URLs.
	* w3css: fixed test.
	* sundocs: removed, use sunonesearch.
	* xxx: removed, use arxiv.
	* test/runtests: prefer decoded_content if available.

2008-03-24  Ian Beckwith  <ianb@erislabs.net>

	* Thanks to James TD Smith for the following:
	  + New elvis: javasun - search Java API Docs.
	  + google: -country option to specify country.
	    Also respects SURFRAW_lang variable.