@@ -4,7 +4,7 @@
 . surfraw || exit 1
 
 w3_config_hook () {
-def   SURFRAW_webster_book Dictionary
+def   SURFRAW_webster_book dictionary
 }
 
 w3_usage_hook () {
@@ -22,7 +22,7 @@ w3_parse_option_hook () {
     opt="$1"
     optarg="$2"
     case "$opt" in
-    -t*) setopt   SURFRAW_webster_book Thesaurus ;;
+    -t*) setopt   SURFRAW_webster_book thesaurus ;;
 	*) return 1 ;;
     esac
     return 0
@@ -35,8 +35,8 @@ SURFRAW_quote_ifs=0
 w3_parse_args "$@"
 # w3_args now contains a list of arguments
 if test -z "$w3_args"; then
-    w3_browse_url "http://www.m-w.com/dictionary.htm"
+    w3_browse_url "http://www.merriam-webster.com/dictionary.htm"
 else
     escaped_args=`w3_url_of_arg $w3_args`
-    w3_browse_url "http://www.m-w.com/cgi-bin/dictionary?book=${SURFRAW_webster_book}&va=${escaped_args}"
+    w3_browse_url "http://www.merriam-webster.com/${SURFRAW_webster_book}/${escaped_args}"
 fi
