@@ -37,6 +37,7 @@ elvi.1sr.gz @mandir@/man1/freedb.1sr.gz
 elvi.1sr.gz @mandir@/man1/freshmeat.1sr.gz
 elvi.1sr.gz @mandir@/man1/fsfdir.1sr.gz
 elvi.1sr.gz @mandir@/man1/genpkg.1sr.gz
+elvi.1sr.gz @mandir@/man1/genportage.1sr.gz
 elvi.1sr.gz @mandir@/man1/google.1sr.gz
 elvi.1sr.gz @mandir@/man1/gutenberg.1sr.gz
 elvi.1sr.gz @mandir@/man1/happypenguin.1sr.gz
@@ -49,6 +50,7 @@ elvi.1sr.gz @mandir@/man1/lsm.1sr.gz
 elvi.1sr.gz @mandir@/man1/musicbrainz.1sr.gz
 elvi.1sr.gz @mandir@/man1/netbsd.1sr.gz
 elvi.1sr.gz @mandir@/man1/openbsd.1sr.gz
+elvi.1sr.gz @mandir@/man1/piratebay.1sr.gz
 elvi.1sr.gz @mandir@/man1/pgpkeys.1sr.gz
 elvi.1sr.gz @mandir@/man1/port.1sr.gz
 elvi.1sr.gz @mandir@/man1/pubmed.1sr.gz
