@@ -17,7 +17,7 @@ iPod
 ebay -c=ch ipod
 iPod
 ebay -c=cn ipod
-mp3
+iPod
 ebay -c=de ipod
 iPod
 ebay -c=es ipod
