@@ -1,0 +1,2 @@
+sr genportage surfraw
+www-client/surfraw
