@@ -15,15 +15,20 @@
 
 				  N E W S
 
-Sat Jul 19 05:46:03 BST 2008  - surfraw 2.2.3
+Sat Sep 13 20:40:01 BST 2008  - surfraw 2.2.3
 
+  * Surfraw now defaults to graphical mode. See surfraw(1)
+    for how to change the default back.
   * Search for default browsers during build.
     This can be overridden by passing --with-text-browser=BROWSER
     and --with-graphical-browser=BROWSER to ./configure.
+  * New elvis: piratebay, genportage. Thanks to J.R. Mauro.
   * Detect which awk to use.
-  * Fixed slinuxdoc.
+  * Fixed slinuxdoc and webster.
   * Removed bashisms.
   * Fixed uninstall.
+  * Add --disable-sr option to ./configure to disable installing the
+    'sr' symbolic link, to avoid clashes with the SR programming language.
 
 Thu Jul  3 08:47:14 BST 2008  - surfraw 2.2.2
 
